# polycli

./: .gitignore  BLOCKERS.md  Cargo.toml  HERMES.md  IMPLEMENTATION_SUMMARY.md  LITERATURE_REVIEW.md  PHASE_STATUS.md  README.md  autoresearch.sh  check_errors.txt  check_output.txt  check_results.txt  config.yaml  config_polycli.yaml  error_probe.txt  errors.txt  errors_only.txt  install.sh  results_hawkes-flow.tsv  some.md
.claude/: settings.local.json
.overstory/: config.yaml
cli/: Cargo.toml
cli/src/: auth.rs  config.rs  main.rs
cli/src/commands/: clob.rs  mod.rs  wallet.rs
cli/src/output/: clob.rs  events.rs  markets.rs  mod.rs
cli/tests/: cli_integration.rs
docs/: FAIRVALUE_IMPLEMENTATION_REVIEW.md  FAIRVALUE_TEMPORAL_INTEGRATION_PLAN.md  FUSED_IMPLEMENTATION_REVIEW.md  SCALPER_FAIRVALUE_FUSION_PLAN.md  TEMPORAL_ARBITRAGE_STRATEGY.md  VALIDATION_RUN_ANALYSIS.md  execution_spec.md  fair_value_model.md  implementation_plan.md.resolved  qlib_integration_plan.md  qlib_task_list.md  research_schema.md  strategy_engine_spec.md  task.md.resolved
fairvalue_validation/: execution_events.jsonl  market_events.jsonl  strategy_events.jsonl
fused_validation/: execution_events.jsonl  market_events.jsonl  strategy_events.jsonl
research/: 00_research_goal.md  HAWKES_FLOW_REPORT.md  PROBLEM_DECOMPOSE.md  experiment_design.md
research/autoresearch/: hawkesflow_review.md  (+5 more)
src/: main.rs
tests/: cli_integration.rs
validation/: session_20260228_170430_summary.json  session_20260228_172335_summary.json  session_20260228_191459_summary.json  session_20260228_192541_summary.json  session_20260228_193613_summary.json  session_20260228_194513_summary.json  session_20260228_195214_summary.json  session_20260228_195214_trades.csv  session_20260228_221501_summary.json  session_20260228_224941_summary.json  session_20260228_224941_trades.csv  session_20260301_020236_summary.json  session_20260301_021009_summary.json  session_20260301_022816_summary.json  session_20260301_024118_trades.csv  session_20260301_024459_summary.json  session_20260301_024459_trades.csv  session_20260301_025248_summary.json  session_20260301_025248_trades.csv  session_20260301_040325_summary.json  session_20260301_041049_summary.json  session_20260301_041049_trades.csv  session_20260301_053818_summary.json  session_20260301_055014_summary.json  validation_summary.json  validation_trades.csv
(+157 files in other folders)
