[package]
name = "polymarket-cli"
version = "0.1.4"
edition = "2024"
rust-version = "1.88.0"
description = "CLI for Polymarket — browse markets, trade, and manage positions"
license = "MIT"
repository = "https://github.com/Polymarket/polymarket-cli"
keywords = ["polymarket", "prediction-markets", "trading", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "polymarket"
path = "src/main.rs"

[dependencies]
polymarket-client-sdk = { version = "0.4", features = ["gamma", "data", "bridge", "clob", "ctf"] }
alloy = { version = "1.6.3", default-features = false, features = ["providers", "sol-types", "contract", "reqwest", "reqwest-rustls-tls", "signer-local", "signers"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "net"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
rust_decimal = "1"
anyhow = "1"
chrono = "0.4"
dirs = "6"
rustyline = "15"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
parquet = "54"
arrow = "54"
rand = "0.9"
rand_distr = "0.5"
statrs = "0.18"
csv = "1"
indicatif = "0.17"
duckdb = { version = "1.4.4", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rust_decimal_macros = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
