[package]
name = "polymarket-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "polymarket"
path = "src/main.rs"

[dependencies]
polymarket-client-sdk = { path = "../rs-clob-client", features = ["gamma", "data", "bridge", "clob"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
rust_decimal = "1"
anyhow = "1"
chrono = "0.4"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rust_decimal_macros = "1"
